# docker-log-emitter

./: Cargo.toml  README.md
src/: container_logs.rs  emitter.rs  helpers.rs  logging.rs  main.rs  syslog.rs  systemd.rs
